--- a/publication-accepted.html
+++ b/publication-accepted.html
@@ -18,7 +18,57 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2021multitask">1</a>]
+[<a name="wang2021two">1</a>]
+</td>
+<td class="bibtexitem">
+Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
+ A two-stage multi-objective genetic programming with archive for
+  uncertain capacitated arc routing problem.
+ In <em>Proceedings of the ACM Genetic and Evolutionary Computation
+  Conference (GECCO)</em>. ACM, mar 2021.
+[&nbsp;<a href="publication-accepted_bib.html#wang2021two">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="ardeh2021novel">2</a>]
+</td>
+<td class="bibtexitem">
+Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
+ A novel multi-task genetic programming approach to uncertain
+  capacitated arc routing problem.
+ In <em>Proceedings of the ACM Genetic and Evolutionary Computation
+  Conference (GECCO)</em>. ACM, mar 2021.
+[&nbsp;<a href="publication-accepted_bib.html#ardeh2021novel">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="jia2021bi">3</a>]
+</td>
+<td class="bibtexitem">
+Yahui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
+ A bi-level ant colony optimization algorithm for capacitated electric
+  vehicle routing problem.
+ <em>IEEE Transactions on Cybernetics</em>, mar 2021.
+[&nbsp;<a href="publication-accepted_bib.html#jia2021bi">bib</a>&nbsp;| 
+<a href="https://doi.org/">DOI</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="zhang2021multitask">4</a>]
 </td>
 <td class="bibtexitem">
 Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, Kay&nbsp;Chen Tan, and Mengjie Zhang.
@@ -34,7 +84,7 @@ Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, Kay&nbsp;Chen Tan, and Mengjie Zhan
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2021correlation">2</a>]
+[<a name="zhang2021correlation">5</a>]
 </td>
 <td class="bibtexitem">
 Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
@@ -50,7 +100,7 @@ Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2021collaborative">3</a>]
+[<a name="zhang2021collaborative">6</a>]
 </td>
 <td class="bibtexitem">
 Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
@@ -66,7 +116,7 @@ Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020route">4</a>]
+[<a name="zhang2020route">7</a>]
 </td>
 <td class="bibtexitem">
 Yuzhou Zhang, Yi&nbsp;Mei, Shihua Huang, Xin Zheng, and Cuijuan Zhang.
@@ -82,7 +132,7 @@ Yuzhou Zhang, Yi&nbsp;Mei, Shihua Huang, Xin Zheng, and Cuijuan Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="gao2020adaptive">5</a>]
+[<a name="gao2020adaptive">8</a>]
 </td>
 <td class="bibtexitem">
 Guanqiang Gao, Yi&nbsp;Mei, Yahui Jia, Will Browne, and Bin Xin.
@@ -98,7 +148,7 @@ Guanqiang Gao, Yi&nbsp;Mei, Yahui Jia, Will Browne, and Bin Xin.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020surrogate">6</a>]
+[<a name="zhang2020surrogate">9</a>]
 </td>
 <td class="bibtexitem">
 Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, Mengjie Zhang, and Kay&nbsp;Chen Tan.
@@ -114,7 +164,7 @@ Fangfang Zhang, Yi&nbsp;Mei, Su&nbsp;Nguyen, Mengjie Zhang, and Kay&nbsp;Chen Ta
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="zhang2020divide">7</a>]
+[<a name="zhang2020divide">10</a>]
 </td>
 <td class="bibtexitem">
 Yuzhou Zhang, Yi&nbsp;Mei, Buzhong Zhang, and Keqin Jiang.
@@ -130,7 +180,7 @@ Yuzhou Zhang, Yi&nbsp;Mei, Buzhong Zhang, and Keqin Jiang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="li2020divide">8</a>]
+[<a name="li2020divide">11</a>]
 </td>
 <td class="bibtexitem">
 Lin Li, Wei Fang, Yi&nbsp;Mei, and Quan Wang.
@@ -146,7 +196,7 @@ Lin Li, Wei Fang, Yi&nbsp;Mei, and Quan Wang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="jia2020contribution">9</a>]
+[<a name="jia2020contribution">12</a>]
 </td>
 <td class="bibtexitem">
 Yahui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -162,7 +212,7 @@ Yahui Jia, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="costa2020adaptive">10</a>]
+[<a name="costa2020adaptive">13</a>]
 </td>
 <td class="bibtexitem">
 Joao Costa, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -179,7 +229,7 @@ Joao Costa, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="wang2020towards">11</a>]
+[<a name="wang2020towards">14</a>]
 </td>
 <td class="bibtexitem">
 Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -197,7 +247,7 @@ Shaolin Wang, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020gphh">12</a>]
+[<a name="ardeh2020gphh">15</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -214,7 +264,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020diversity">13</a>]
+[<a name="ardeh2020diversity">16</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -231,7 +281,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="ardeh2020parametric">14</a>]
+[<a name="ardeh2020parametric">17</a>]
 </td>
 <td class="bibtexitem">
 Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
@@ -248,7 +298,7 @@ Mazhar&nbsp;Ansari Ardeh, Yi&nbsp;Mei, and Mengjie Zhang.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="tan2020cooperative">15</a>]
+[<a name="tan2020cooperative">18</a>]
 </td>
 <td class="bibtexitem">
 Boxiong Tan, Hui Ma, Yi&nbsp;Mei, and Mengjie Zhang.
