--- a/404.html
+++ b/404.html
@@ -394,23 +394,23 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/jia-2021-bi/">A Bi-level Ant Colony Optimization Algorithm for Capacitated Electric Vehicle Routing Problem</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/ardeh-2021-novel/">A Novel Multi-Task Genetic Programming Approach to Uncertain Capacitated Arc Routing Problem</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/wang-2021-two/">A Two-Stage Multi-Objective Genetic Programming with Archive for Uncertain Capacitated Arc Routing Problem</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/zhang-2021-multitask/">Multitask Genetic Programming Based Generative Hyper-heuristics: A Case Study in Dynamic Scheduling</a></li>
   </ul>
   
   <ul>
     <li><a href="/publication/zhang-2021-collaborative/">Collaborative Multi-fidelity based Surrogate Models for Genetic Programming in Dynamic Flexible Job Shop Scheduling</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/zhang-2021-correlation/">Correlation Coefficient based Recombinative Guidance for Genetic Programming Hyper-heuristics in Dynamic Flexible Job Shop Scheduling</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/zhang-2020-route/">A Route Clustering and Search Heuristic for LargeScale Multi-Depot Capacitated Arc Routing Problem</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/gao-2020-adaptive/">Adaptive Coordination Ant Colony Optimisation for Multi-Point Dynamic Aggregation</a></li>
   </ul>
   
   
