--- a/publication-accepted_bib.html
+++ b/publication-accepted_bib.html
@@ -7,7 +7,48 @@
 </head>
 
 <body>
-<h1>publication-accepted.bib</h1><a name="zhang2021multitask"></a><pre>
+<h1>publication-accepted.bib</h1><a name="wang2021two"></a><pre>
+@inproceedings{<a href="publication-accepted.html#wang2021two">wang2021two</a>,
+  title = {A Two-Stage Multi-Objective Genetic Programming with Archive for Uncertain Capacitated Arc Routing Problem},
+  author = {Wang, Shaolin and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the ACM Genetic and Evolutionary Computation Conference (GECCO)},
+  pages = {},
+  year = {2021},
+  month = {mar},
+  organization = {ACM},
+  doi = {}
+}
+</pre>
+
+<a name="ardeh2021novel"></a><pre>
+@inproceedings{<a href="publication-accepted.html#ardeh2021novel">ardeh2021novel</a>,
+  title = {A Novel Multi-Task Genetic Programming Approach to Uncertain Capacitated Arc Routing Problem},
+  author = {Ardeh, Mazhar Ansari and Mei, Yi and Zhang, Mengjie},
+  booktitle = {Proceedings of the ACM Genetic and Evolutionary Computation Conference (GECCO)},
+  pages = {},
+  year = {2021},
+  month = {mar},
+  organization = {ACM},
+  doi = {}
+}
+</pre>
+
+<a name="jia2021bi"></a><pre>
+@article{<a href="publication-accepted.html#jia2021bi">jia2021bi</a>,
+  title = {A Bi-level Ant Colony Optimization Algorithm for Capacitated Electric Vehicle Routing Problem},
+  author = {Jia, Yahui and Mei, Yi and Zhang, Mengjie},
+  journal = {IEEE Transactions on Cybernetics},
+  month = {mar},
+  year = {2021},
+  vol = {},
+  number = {},
+  pages = {},
+  publisher = {IEEE},
+  doi = {}
+}
+</pre>
+
+<a name="zhang2021multitask"></a><pre>
 @article{<a href="publication-accepted.html#zhang2021multitask">zhang2021multitask</a>,
   title = {Multitask Genetic Programming Based Generative Hyper-heuristics: A Case Study in Dynamic Scheduling},
   author = {Zhang, Fangfang and Mei, Yi and Nguyen, Su and Tan, Kay Chen and Zhang, Mengjie},
