--- a/404.html
+++ b/404.html
@@ -394,6 +394,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/zhang-2020-evolving/">Evolving Scheduling Heuristics via Genetic Programming with Feature Selection in Dynamic Flexible Job Shop Scheduling</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/jia-2021-bi/">A Bi-level Ant Colony Optimization Algorithm for Capacitated Electric Vehicle Routing Problem</a></li>
   </ul>
   
@@ -407,10 +411,6 @@
   
   <ul>
     <li><a href="/publication/zhang-2021-multitask/">Multitask Genetic Programming Based Generative Hyper-heuristics: A Case Study in Dynamic Scheduling</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/zhang-2021-collaborative/">Collaborative Multi-fidelity based Surrogate Models for Genetic Programming in Dynamic Flexible Job Shop Scheduling</a></li>
   </ul>
   
   
