--- a/cec2021-tutorial-xaigp/index.html
+++ b/cec2021-tutorial-xaigp/index.html
@@ -28,8 +28,8 @@
   
     
   
-  <meta name="description" content="Topic Introduction Explainable AI (XAI) is becoming a very hot research topic in the AI field due to its urgent needs in various domains such as finance, security, medical, gaming, legislation, etc.
-In evolutionary computation, Genetic Programming (GP) has been successfully used in various machine learning tasks including classification, symbolic regression, clustering, feature construction, and automatic heuristic design. As a symbolic-based evolutionary learning approach, GP has an intrinsic great potential to contribute to XAI, as a GP model tends to be interpretable.">
+  <meta name="description" content="Topic Introduction Although machine learning has achieved great success in many real-world applications, it is criticised as usually behaving like a black box, and it is often difficult, if not impossible, to understand how the machine learning system makes the decision/prediction. This could lead to serious consequences, such as the accidents of the Tesla automatic driving cars, and biases of the automatic bank loan approval systems.
+To address this issue, Explainable AI (XAI) is becoming a very hot research topic in the AI field due to its urgent needs in various domains such as finance, security, medical, gaming, legislation, etc.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/cec2021-tutorial-xaigp/">
@@ -121,8 +121,8 @@ In evolutionary computation, Genetic Programming (GP) has been successfully used
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/cec2021-tutorial-xaigp/">
   <meta property="og:title" content="Tutorial: Towards Better Explainable AI Through Genetic Programming | Yi Mei @ VUW">
-  <meta property="og:description" content="Topic Introduction Explainable AI (XAI) is becoming a very hot research topic in the AI field due to its urgent needs in various domains such as finance, security, medical, gaming, legislation, etc.
-In evolutionary computation, Genetic Programming (GP) has been successfully used in various machine learning tasks including classification, symbolic regression, clustering, feature construction, and automatic heuristic design. As a symbolic-based evolutionary learning approach, GP has an intrinsic great potential to contribute to XAI, as a GP model tends to be interpretable."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="Topic Introduction Although machine learning has achieved great success in many real-world applications, it is criticised as usually behaving like a black box, and it is often difficult, if not impossible, to understand how the machine learning system makes the decision/prediction. This could lead to serious consequences, such as the accidents of the Tesla automatic driving cars, and biases of the automatic bank loan approval systems.
+To address this issue, Explainable AI (XAI) is becoming a very hot research topic in the AI field due to its urgent needs in various domains such as finance, security, medical, gaming, legislation, etc."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -510,7 +510,13 @@ In evolutionary computation, Genetic Programming (GP) has been successfully used
 
 <h3 id="topic-introduction">Topic Introduction</h3>
 
-<p>Explainable AI (XAI) is becoming a very hot research topic in the AI field due to its urgent needs in various domains such as finance, security, medical, gaming, legislation, etc.</p>
+<p>Although machine learning has achieved great success in many real-world applications, it is criticised as usually behaving like a black box, and it is often difficult, if not impossible, to understand how the machine learning system makes the decision/prediction. This could lead to serious consequences, such as the accidents of the Tesla automatic driving cars, and biases of the automatic bank loan approval systems.</p>
+
+<p><img src="/img/gigo.png" alt="" /></p>
+
+<p>To address this issue, Explainable AI (XAI) is becoming a very hot research topic in the AI field due to its urgent needs in various domains such as finance, security, medical, gaming, legislation, etc. There have been an increasing number of studies on XAI in recent years, which improves the current machine learning systems from different aspects.</p>
+
+<p><img src="/img/xai-figure.png" alt="" /></p>
 
 <p>In evolutionary computation, Genetic Programming (GP) has been successfully used in various machine learning tasks including classification, symbolic regression, clustering, feature construction, and automatic heuristic design. As a symbolic-based evolutionary learning approach, GP has an intrinsic great potential to contribute to XAI, as a GP model tends to be interpretable.</p>
 
