--- a/index.html
+++ b/index.html
@@ -2780,11 +2780,11 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 <h3 id="conference-program-committee-member">Conference Program Committee Member</h3>
 
-<p>I serve as a PC member of ~40 international conferences (<a href="/pclist/">full list</a>).</p>
+<p>I serve as a PC member of 40+ international conferences (<a href="/pclist/">full list</a>).</p>
 
 <h3 id="journal-reviewer">Journal Reviewer</h3>
 
-<p>I serve as a reviewer of ~30 international journals, including the top/major journals in the EC/OR fields (<a href="/reviewers/">full list</a>).</p>
+<p>I serve as a reviewer of 40+ international journals, including the top/major journals in the EC/OR fields (<a href="/reviewers/">full list</a>).</p>
 
 <h3 id="membership">Membership</h3>
 
