--- a/cec2021-tutorial-xaigp/index.html
+++ b/cec2021-tutorial-xaigp/index.html
@@ -512,7 +512,7 @@ To address this issue, Explainable AI (XAI) is becoming a very hot research topi
 
 <p>Although machine learning has achieved great success in many real-world applications, it is criticised as usually behaving like a black box, and it is often difficult, if not impossible, to understand how the machine learning system makes the decision/prediction. This could lead to serious consequences, such as the accidents of the Tesla automatic driving cars, and biases of the automatic bank loan approval systems.</p>
 
-<p><img src="/img/gigo.png" alt="" /></p>
+<p><img src="/img/gigo.jpg" alt="" /></p>
 
 <p>To address this issue, Explainable AI (XAI) is becoming a very hot research topic in the AI field due to its urgent needs in various domains such as finance, security, medical, gaming, legislation, etc. There have been an increasing number of studies on XAI in recent years, which improves the current machine learning systems from different aspects.</p>
 
@@ -551,6 +551,8 @@ To address this issue, Explainable AI (XAI) is becoming a very hot research topi
 <h3 id="presenter">Presenter</h3>
 
 <p><strong>Dr. Yi Mei, Victoria University of Wellington, New Zealand (yi.mei@ecs.vuw.ac.nz)</strong></p>
+
+<p><img src="/img/YiMei.jpg" alt="" /></p>
 
 <p>Dr. Yi Mei (M’09-SM’18) is a Senior Lecturer at the School of Engineering and Computer Science, Victoria University of Wellington, Wellington, New Zealand. He received his BSc and PhD degrees from University of Science and Technology of China in 2005 and 2010, respectively. His research interests include evolutionary computation in scheduling, routing and combinatorial optimisation, as well as evolutionary machine learning, hyper-heuristics, genetic programming, feature selection and dimensional reduction.</p>
 
