--- a/cec2021-tutorial-xaigp/index.html
+++ b/cec2021-tutorial-xaigp/index.html
@@ -552,9 +552,9 @@ To address this issue, Explainable AI (XAI) is becoming a very hot research topi
 
 <p><strong>Dr. Yi Mei, Victoria University of Wellington, New Zealand (yi.mei@ecs.vuw.ac.nz)</strong></p>
 
-<p>
-<img align="left" width="150" src="/img/YiMei.jpg">
-</p>
+<div style="width:150px; align:left">
+    ![](/img/YiMei.jpg)
+</div>
 
 <p>Dr. Yi Mei (M’09-SM’18) is a Senior Lecturer at the School of Engineering and Computer Science, Victoria University of Wellington, Wellington, New Zealand. He received his BSc and PhD degrees from University of Science and Technology of China in 2005 and 2010, respectively. His research interests include evolutionary computation in scheduling, routing and combinatorial optimisation, as well as evolutionary machine learning, hyper-heuristics, genetic programming, feature selection and dimensional reduction.</p>
 
